# PyNA62Analysis

./: .gitignore  README.md  build_analyzer.sh  create_analyzer.sh  initialize_run.sh  initialize_run_build.sh  initialize_run_source.sh
na62fw/NA62Analysis/Algorithms/: CMakeLists.txt
na62fw/NA62Analysis/Analyzers/: CMakeLists.txt
na62fw/NA62Analysis/Examples/: CMakeLists.txt  pyrootdemo.py
na62fw/NA62Analysis/StdConfigs/: CMakeLists.txt  config_AlphaComputation  config_Filter2  config_FilterAll  config_K3piSelection  config_LKrFineCalibrationSymm  config_T0EvaluationStep0  config_T0EvaluationStep4
na62fw/NA62Analysis/Tools/: CLs_limit.cpp  CMakeLists.txt  FixStreams.cpp  ROOTCompare.cpp  ROOTFileMerger.cpp  RmObjFromRootF.cpp  RmObjFromRootF.default.list  objignore.txt
na62fw/NA62Analysis/ToolsLib/: CMakeLists.txt
na62fw/NA62MC/: CMakeLists.txt  GNUmakefile  NA62MC.cc  NA62MCConfig.cmake.in
na62fw/NA62MC/Beam/: CMakeLists.txt
na62fw/NA62MC/Generator/: CMakeLists.txt  CustomMuonDecay.cc  CustomMuonDecay.hh  GaussLegendre.cc  GaussLegendre.hh  MuonRadiativeDecayChannelWithSpinWithEgammaCut.cc  common_blocks.f  decay_dictionary.txt  dilog64.F  genbod.F  kch2lnununu.cc  kch2munuXscal.cc  kch2munuXvec.cc  kch2pi0enu.F  kch2pi0munug_kloe.F  kch2pigg.F  kch2pigll.F  kch2pipi0ee_ib.F  kch2pipi0g.F  kch2pipi0g_ib.F  kch2pipipig.cc  kch3body.F  kch4body.F  kl2pipipi0.cc  kl4_ferrara.F  masses.f  masses.hh  mcadd4cpp.hh  pi0DDalitz.cc  pi0DDalitz.hh  pi0Dalitz.cc  pi0Dalitz.hh  pi0ee.cc  proglib.F  rambos.F  random_generators.F
na62fw/NA62MC/LKr/: CMakeLists.txt
na62fw/NA62MC/config/: NA62MC-cc7Config.cmake  SubDir.cmake
na62fw/NA62MC/include/: CMC.hh  DatacardManager.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  ExoticProductionMode.hh  G4CMCDecayer.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh
na62fw/NA62MC/macros/: CheckGeom.C  ExampleRun.mac  ExoticRun.mac  GDML2Root.cc  GenerateGDML.mac  GeometryTest.mac  LAVMatrixSampling.mac  StandardRun.mac  StandardVisRun.mac  vis.mac
na62fw/NA62MC/scripts/: GeometryTest.pl  GeometryVisualization.sh  env.sh  run.sh
na62fw/NA62MC/src/: CMC.cc  DatacardManager.cc  DatacardMessenger.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  ExoticParticle.cc  ExoticParticleGun.cc  ExoticParticlePhysics.cc  G4CMCDecayer.cc  GeometryParameters.cc  MCTruthConfig.cc  MCTruthManager.cc  MCTruthTrackingAction.cc  MatrixGun.cc  NA62Random.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RandomGenerator.cc  RunAction.cc  SteppingAction.cc  cmc_common_address.c
na62fw/NA62Reconstruction/RecoBase/: CMakeLists.txt
na62fw/NA62Tools/: CMakeLists.txt  GNUmakefile  NA62ToolsConfig.cmake.in
na62fw/NA62Tools/Persistency/: CMakeLists.txt
na62fw/NA62Tools/config/: NA62Tools-cc7Config.cmake  SubDir.cmake  SubDirSlimPersistency.cmake  common.cmake
na62fw/NA62Tools/include/: BlueTubeMagneticFieldMap.hh  BlueTubeTracker.hh  CHANTIGeometry.hh  G4BLMagneticFieldMap.hh  GigaTrackerParameterTools.hh  GitRevision.hh  MNP33MagneticFieldMap.hh  MUV3Geometry.hh  NA62ConditionsService.hh  NA62Timer.hh  NA62Utilities.hh  NewCHODGeometry.hh  PersistencyChanger.hh  RICHParameters.hh
na62fw/NA62Tools/scripts/: env.sh
na62fw/NA62Tools/src/: BlueTubeMagneticFieldMap.cc  FringeMagneticFieldMap.cc  G4BLMagneticFieldMap.cc  GigaTrackerParameterTools.cc  GitRevision.cc  MNP33MagneticFieldMap.cc  NA62ConditionsService.cc  NA62Timer.cc  NA62Utilities.cc  PersistencyChanger.cc  RICHParameters.cc  StringInterpreter.cc
rcurrent/NA62Analysis/: CMakeLists.txt  NA62AnalysisBuilder.py  Nightly.log.old
rcurrent/NA62Analysis/Algorithms/: CMakeLists.txt
rcurrent/NA62Analysis/Python-Conversion/: UserMethodsModule.cpp  compile_UM  setup.py
rcurrent/NA62Analysis/PythonAnalyzer/: compile_UM.sh  setup.py
rcurrent/NA62Analysis/StandardAnalyzers/: Filter.cfg
rcurrent/NA62Analysis/StdConfigs/: config_BetaComputation  config_Filter  config_Filter1  config_Filter3  config_GigaTrackerPixelT0ChipTW  config_LKrFineCalibrationAsymm  config_NKInfo  config_PostProcessing  config_SpectrometerMagicT0  config_T0EvaluationStep1  config_T0EvaluationStep1RICH
rcurrent/NA62Analysis/Templates/: CMakeLists.txt  CMakeLists_Algos.txt  CMakeLists_PO.txt  config  env.sh  rootlogon.C  settingsna62  templateAnalyzer-firstdraft.py  templateAnalyzer.py
rcurrent/NA62Analysis/Tools/: CMakeLists.txt  ROOTCompare.cpp  ROOTFileMerger.cpp  RmObjFromRootF.cpp  RmObjFromRootF.default.list
rcurrent/NA62Analysis/ToolsLib/: CMakeLists.txt
rcurrent/NA62Analysis/bin-cc7/: FixStreams  ROOTCompare  ROOTFileMerger  RmObjFromRootF  cleanFileList
rcurrent/NA62Analysis/config/: Filter2.conf  Filter3.conf
rcurrent/NA62Analysis/doc/: Installation.dox  componentStatus.dox
rcurrent/NA62Analysis/include/: Analyzer.hh  BadBursts.hh  CanvasOrganizer.hh  ConfigParser.hh  ConfigSettings.hh  EventChecker.hh  EventFraction.hh  Indexer.hh  InputHandler.hh  NA62Exceptions.hh  OMAnalyzerWindow.hh  OMMainWindow.hh  OutputHandler.hh  Persistency.hh  StringBalancedTable.hh  StringTable.hh  TermManip.hh  UserMethods.hh  containers.hh
rcurrent/NA62Analysis/lib-cc7/: libTRecoLKrCandidateMC.rootmap  libTRecoLKrCandidateMC_rdict.pcm  libToolsLibObjects.rootmap  libToolsLibObjects_rdict.pcm
rcurrent/NA62Analysis/scripts/: BadBurstSummary.pl  BuildDPGHitLibrary.sh  NA62Analysis.cmake  NA62AnalysisBuilder.py  env.sh
rcurrent/NA62Analysis/src/: Analyzer.cc  BadBursts.cc  BaseAnalysis.cc  CanvasOrganizer.cc  ConfigSettings.cc  EventChecker.cc  HistoHandler.cc  InputTree.cc  MCSimple.cc  Misc.cc  OMAnalyzerWindow.cc  OMMainWindow.cc  ParticleInterface.cc  ParticleTree.cc  StringTable.cc  TimeCounter.tcc  UserMethods.cc  Verbose.cc
rcurrent/NA62DB/DBBase/: CMakeLists.txt
rcurrent/NA62Reconstruction/: CMakeLists.txt  GNUmakefile  HISTORY  NA62EventDisplay.cc  NA62OnlineMonitor.cc  NA62Reco.cc  Nightly.log.old
rcurrent/NA62Reconstruction/HLT/: CMakeLists.txt
(+3324 files in other folders)
