
add_subdirectory(CalibrationTools)
add_subdirectory(DetectorAssociations)
add_subdirectory(Filters)
add_subdirectory(MonitoringTools)
add_subdirectory(PhysicsTools)
add_subdirectory(PnnAnalyzers)
add_subdirectory(PreAnalyzers)
add_subdirectory(TestTools)

SET(ALL_ANALYZERS_LISTS ${ALL_ANALYZERS_LISTS} PARENT_SCOPE)