FILE(GLOB ANCONFIGS config_*)

message(STATUS "Building Std analyzers")

include_directories(${NA62TOOLS_INCLUDE_DIRS})
include_directories(${NA62TOOLS_PERS_INCLUDE_DIRS})
include_directories(${NA62TOOLS_SLIM_INCLUDE_DIRS})
include_directories(${NA62RECO_INCLUDE_DIRS})
include_directories(${NA62ANALYSIS}/include)
include_directories(${NA62ANALYSIS}/ToolsLib/include)
include_directories(${NA62ANALYSIS}/Algorithms/include)
include_directories(${NA62ANALYSIS}/Examples/include)
SUBDIRLIST("${NA62ANALYSIS}/Analyzers" anDirs)
FOREACH(d ${anDirs})
	include_directories(${d}/include)
ENDFOREACH(d)
link_directories(${NA62ANALYSIS}/lib-$ENV{SYSTEMINSTALL})
link_directories(${NA62TOOLS_LIBRARY_DIRS})
link_directories(${NA62RECO_LIBRARY_DIRS})

FOREACH (cfgPath ${ANCONFIGS})
	get_filename_component(cfgFiles ${cfgPath} NAME_WE)
	message(STATUS "  Adding ${cfgFiles}")
	add_custom_command(OUTPUT main_${cfgFiles}.cc
		COMMAND export ANALYSISFW_PATH=${CMAKE_SOURCE_DIR} && ${CMAKE_SOURCE_DIR}/NA62AnalysisBuilder.py build-std ${cfgPath}
		WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
	)
	SET(dependencies ${ALL_ANALYZERS_LISTS})
	SANDWICH_LIST(dependencies "l" "${LIBTYPEPOSTFIX}")
	string(SUBSTRING ${cfgFiles} 7 -1 exeName)
	add_executable(${exeName} main_${cfgFiles}.cc)
	add_dependencies(${exeName} NA62Analyzers)
	target_link_libraries(${exeName} Algorithms${LIBTYPEPOSTFIX})
	target_link_libraries(${exeName} AnalysisFW${LIBTYPEPOSTFIX})
	target_link_libraries(${exeName} ${dependencies} ToolsLib${LIBTYPEPOSTFIX} ToolsLibObjects${LIBTYPEPOSTFIX} Algorithms${LIBTYPEPOSTFIX})
	target_link_libraries(${exeName} ${dependencies} ToolsLib${LIBTYPEPOSTFIX} ToolsLibObjects${LIBTYPEPOSTFIX} Algorithms${LIBTYPEPOSTFIX})
	target_link_libraries(${exeName} AnalysisFW${LIBTYPEPOSTFIX})
	target_link_libraries(${exeName} ${NA62RECO_LIBS_USED})
	target_link_libraries(${exeName} ${ROOT_LIBRARIES} Minuit Geom TMVA EG Spectrum Gui RooFit RooFitCore)
	target_link_libraries(${exeName} ${NA62TOOLS_LIBS_PERS_USED})
	target_link_libraries(${exeName} ${NA62TOOLS_LIBS_USED})
	target_link_libraries(${exeName} ${NA62TOOLS_LIBS_SLIM_USED})
	target_link_libraries(${exeName} ${NA62TOOLS_LIBS_USED})
	target_link_libraries(${exeName} ${Geant4_LIBRARIES} sqlite3 gfortran ${BOOST_LIB})
	if((${cfgFiles} STREQUAL config_GigaTrackerTimeResolution) OR (${cfgFiles} STREQUAL config_PostProcessing))
	  target_link_libraries(${exeName} Algorithms${LIBTYPEPOSTFIX})
	  target_link_libraries(${exeName} AnalysisFW${LIBTYPEPOSTFIX})
	  target_link_libraries(${exeName} ${dependencies} ToolsLib${LIBTYPEPOSTFIX} ToolsLibObjects${LIBTYPEPOSTFIX} Algorithms${LIBTYPEPOSTFIX})
	  target_link_libraries(${exeName} ${dependencies} ToolsLib${LIBTYPEPOSTFIX} ToolsLibObjects${LIBTYPEPOSTFIX} Algorithms${LIBTYPEPOSTFIX})
	  target_link_libraries(${exeName} AnalysisFW${LIBTYPEPOSTFIX})
	endif()
ENDFOREACH(cfgPath)
