add_subdirectory(SlimReco)
add_subdirectory(FullReco)

SET(NA62TOOLS_PERS_INCLUDE_DIRS ${NA62TOOLS_PERS_INCLUDE_DIRS} PARENT_SCOPE)
SET(NA62TOOLS_PERS_LIBRARIES ${NA62TOOLS_PERS_LIBRARIES} PARENT_SCOPE)
SET(NA62TOOLS_PERS_LIBRARIES_STATIC ${NA62TOOLS_PERS_LIBRARIES_STATIC} PARENT_SCOPE)

SET(NA62TOOLS_SLIM_INCLUDE_DIRS ${NA62TOOLS_SLIM_INCLUDE_DIRS} PARENT_SCOPE)
SET(NA62TOOLS_SLIM_LIBRARIES ${NA62TOOLS_SLIM_LIBRARIES} PARENT_SCOPE)
SET(NA62TOOLS_SLIM_LIBRARIES_STATIC ${NA62TOOLS_SLIM_LIBRARIES_STATIC} PARENT_SCOPE)
